# binance_fs_bot

./: Cargo.toml  blacklist.toml  check.toml  config.toml
src/: check.rs  main.rs  tg_bot.rs
