[package]
name = "binance_fs_bot"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
toml = "0.9.8"
teloxide = { version = "0.17.0", features = ["macros"] }